# $Id: Makefile.am,v 1.3 2006/06/06 12:55:57 petiteau Exp $
EXTRA_DIST = \
			Generalites/Include \
			Generalites/Doc \
			Outils_Math/Include \
			Outils_Math/Doc \
			Bruits/Include \
			Bruits/Doc \
			Ondes_Gravit/Include \
			Ondes_Gravit/Doc \
			Orbitographie/Include \
			Orbitographie/Doc \
			Fond_Stoch/Include \
			Fond_Stoch/Doc \
			USO_Temps/Include \
			USO_Temps/Doc \
			Memoire/Include \
			Memoire/Doc \
			Input_data/Include \
			Input_data/Doc \
			Input_data/Test/ConfigTest \
			Detecteur/Include \
			Detecteur/Doc \
			TDI/Include \
			TDI/Doc \
			TDI/Test/SigPhaMetSC1.txt \
			TDI/Test/SigPhaMetSC2.txt \
			TDI/Test/SigPhaMetSC3.txt \
			TDI/Test/DelayTDI.txt \
			Main/Include \
			Main/Doc \
			Main/Test/ConfigRefBase \
			Main/Test/ConfigRefBase.xml \
			LISA_AutoGUI.jar \
			configue.ini \
			lisa-xml.xsl \
			ConfigRefBase.xml \
			ConfigRefBase \
			Documentation/ManuelTex/ManuelEN_v1.4.tex \
			Documentation/ManuelTex/ManuelEN_v1.4.pdf \
			Documentation/ManuelTex/ManuelFR_v1.4.tex \
			Documentation/ManuelTex/ManuelFR_v1.4.pdf \
			Documentation/ManuelTex/Figures \
			config_doxygen \
			Doxygen.bibliography \
			Documentation/latex/refman.pdf
			

SUBDIRS = \
	    Outils_Math \
		Outils_Math/SRC \
		Outils_Math/Test \
		Bruits \
		Bruits/SRC \
		Bruits/Test \
		Ondes_Gravit \
		Ondes_Gravit/SRC \
		Ondes_Gravit/Test \
		Orbitographie \
		Orbitographie/SRC \
		Orbitographie/Test \
		Fond_Stoch \
		Fond_Stoch/SRC \
		Fond_Stoch/Test \
		USO_Temps \
		USO_Temps/SRC \
		USO_Temps/Test \
		Memoire \
		Memoire/SRC \
		Memoire/Test \
		Input_data \
		Input_data/SRC \
		Input_data/Test \
		Detecteur \
		Detecteur/SRC \
		Detecteur/Test \
		TDI \
		TDI/SRC \
		TDI/Test \
		Main \
		Main/SRC \
		Main/Test
