# $Id: Makefile.am,v 1.3 2006/06/06 12:55:57 petiteau Exp $
EXTRA_DIST = \
			Generalites/Include \
			Generalites/Doc \
			Outils_Math/Include \
			Outils_Math/Doc \
			Bruits/Include \
			Bruits/Doc \
			Ondes_Gravit/Include \
			Ondes_Gravit/NoFFTW/Include \
			Ondes_Gravit/Doc \
			Orbitographie/Include \
			Orbitographie/Doc \
			Orbit_ESA.input.txt \
			Fond_Stoch/Include \
			Fond_Stoch/Doc \
			USO_Temps/Include \
			USO_Temps/Doc \
			Memoire/Include \
			Memoire/Doc \
			Input_data/Include \
			Input_data/Doc \
			Detecteur/Include \
			Detecteur/Doc \
			TDI/Include \
			TDI/Doc \
			Main/Include \
			Main/Doc \
			lisa-xml.xsl \
			lisa-xml.css \
			Documentation/ManuelTex/ManuelEN_v1.4.tex \
			Documentation/ManuelTex/ManuelEN_v1.4.pdf \
			Documentation/ManuelTex/ManuelEN_v1.4.bbl \
			Documentation/ManuelTex/ManuelFR_v1.4.tex \
			Documentation/ManuelTex/ManuelFR_v1.4.pdf \
			Documentation/ManuelTex/ManuelFR_v1.4.bbl \
			Documentation/ManuelTex/ManDevFR.tex \
			Documentation/ManuelTex/ManDevFR.pdf \
			Documentation/ManuelTex/Figures \
			config_doxygen \
			Documentation/Doxygen.bibliography \
			Documentation/latex/refman.pdf \
			Example_Input/ConfigRefBase \
			Example_Input/ConfigRefBase.xml \
			Example_Input/Log_ConfigRefBase_v145.txt \
			Example_Input/Log_ConfigRefBase_xml_v145.txt \
			Example_Input/SC1.txt \
			Example_Input/SC2.bin \
			Example_Input/SC3.bin \
			Example_Input/Delay.txt
			ForLISATools
			
			

SUBDIRS = \
		Generalites \
	    Outils_Math \
		Outils_Math/SRC \
		Outils_Math/Test \
		Bruits \
		Bruits/SRC \
		Bruits/Test \
		Ondes_Gravit

SUBDIRS += $(SLISAGRAVWAVES_FFTWSRC)
		
SUBDIRS += \
		Ondes_Gravit/SRC \
		Ondes_Gravit/Test \
		Orbitographie \
		Orbitographie/SRC \
		Orbitographie/Test \
		Fond_Stoch \
		Fond_Stoch/SRC \
		Fond_Stoch/Test \
		USO_Temps \
		USO_Temps/SRC \
		USO_Temps/Test \
		Memoire \
		Memoire/SRC \
		Memoire/Test \
		Input_data \
		Input_data/SRC \
		Input_data/Test \
		Detecteur \
		Detecteur/SRC \
		Detecteur/Test \
		TDI \
		TDI/SRC \
		TDI/Test \
		Main \
		Main/SRC \
		Main/Test
