# $Id: Makefile.am,v 1.1 2006/01/13 13:45:30 petiteau Exp $
EXTRA_DIST = NoFFTW/Include Include NoFFTW/SRC SRC

SUBDIRS = $(FFTWSRCINSTALL) Test

include_HEADERS = $(FFTWINCINSTALL)/LISACODE-GW.h \
				$(FFTWINCINSTALL)/LISACODE-GWCusp.h \
				$(FFTWINCINSTALL)/LISACODE-GWFile.h \
				$(FFTWINCINSTALL)/LISACODE-GWNew.h \
				$(FFTWINCINSTALL)/LISACODE-GWPeriGate.h \
				$(FFTWINCINSTALL)/LISACODE-GWBinary.h \
				$(FFTWINCINSTALL)/LISACODE-GWFastSpinBBH.h \
				$(FFTWINCINSTALL)/LISACODE-GWMono.h \
				$(FFTWINCINSTALL)/LISACODE-GWNewton2.h \
				$(FFTWINCINSTALL)/LISACODE-GWSto.h