# $Id: Makefile.am,v 1.2 2006/03/15 16:58:14 petiteau Exp $
# Makefile.am

INCLUDES = \
	-I../Include \
	-I@SLISAGENERAL_INCDIR@ \
	-I@SLISAMATHTOOLS_INCDIR@ 

lib_LIBRARIES = liblisacodenoise.a

liblisacodenoise_a_SOURCES = \
	LISACODE-Noise.cpp \
	LISACODE-NoiseWhite.cpp \
	LISACODE-NoiseFilter.cpp \
	LISACODE-NoiseFShape.cpp \
	LISACODE-NoiseOof.cpp \
	LISACODE-NoiseTwoFilter.cpp \
	LISACODE-NoiseFile.cpp

# end of Makefile.am