# $Id: Makefile.am,v 1.3 2006/06/06 12:55:57 petiteau Exp $
# Makefile.am

INCLUDES = \
	-I../Include \
	-I@SLISAINPUTDATA_INCDIR@ \
	-I@SLISAMEMORY_INCDIR@ \
	-I@SLISAUSOTIME_INCDIR@ \
	-I@SLISANOISE_INCDIR@ \
	-I@SLISABACKGROUND_INCDIR@ \
	-I@SLISAORBITS_INCDIR@ \
	-I@SLISAGRAVWAVES_INCDIR@ \
	-I@SLISAMATHTOOLS_INCDIR@ \
	-I@SLISAGENERAL_INCDIR@

lib_LIBRARIES = liblisacodedetector.a

liblisacodedetector_a_SOURCES = \
	LISACODE-TrFctGW.cpp \
	LISACODE-PhoDetPhaMet.cpp \
	LISACODE-LISA.cpp

# end of Makefile.am
