# $Id: Makefile.am,v 1.1 2006/06/09 09:22:23 petiteau Exp $
# Makefile.am

INCLUDES = \
	-I../Include \
	-I@SLISAORBITS_INCDIR@ \
	-I@SLISAGENERAL_INCDIR@ \
	-I@SLISAMATHTOOLS_INCDIR@


lib_LIBRARIES = liblisacodebackground.a

liblisacodebackground_a_SOURCES = \
	LISACODE-Background.cpp \
	LISACODE-BackgroundGalactic.cpp

# end of Makefile.am
