# $Id: Makefile.am,v 1.3 2006/06/06 12:55:57 petiteau Exp $
# Makefile.am

LIBS       = -llisacodeinputdata \
	@SLISAUSOTIME_LIBS@ \
	@SLISABACKGROUND_LIBS@ \
	@SLISAORBITS_LIBS@ \
	@SLISAGRAVWAVES_LIBS@ $(FFTWL) \
	@SLISANOISE_LIBS@ \
	@SLISAMATHTOOLS_LIBS@

AM_LDFLAGS = -L../SRC  \
	-L@SLISAUSOTIME_LIBDIR@ \
	-L@SLISABACKGROUND_LIBDIR@ \
	-L@SLISAORBITS_LIBDIR@ \
	-L@SLISAGRAVWAVES_LIBDIR@ \
	-L@SLISANOISE_LIBDIR@ \
	-L@SLISAMATHTOOLS_LIBDIR@
			 
			 
INCLUDES   = -I../Include \
	-I@SLISAGRAVWAVES_INCDIR@ \
	-I@SLISABACKGROUND_INCDIR@ \
	-I@SLISAORBITS_INCDIR@ \
	-I@SLISAUSOTIME_INCDIR@ \
	-I@SLISANOISE_INCDIR@ \
	-I@SLISAMATHTOOLS_INCDIR@ \
	-I@SLISAGENERAL_INCDIR@

bin_PROGRAMS = \
		TestConfigSim 

TestConfigSim_SOURCES = LISACODE-TestConfigSim.cpp

# enf of Makefile.am