# $Id: Makefile.am,v 1.1 2006/01/13 11:24:55 petiteau Exp $

INCLUDES   = -I../Include \
	-I@SLISADETECTOR_INCDIR@ \
	-I@SLISATDI_INCDIR@ \
	-I@SLISAINPUTDATA_INCDIR@ \
	-I@SLISAMEMORY_INCDIR@ \
	-I@SLISAUSOTIME_INCDIR@ \
	-I@SLISABACKGROUND_INCDIR@ \
	-I@SLISAORBITS_INCDIR@ \
	-I@SLISAGRAVWAVES_INCDIR@ \
	-I@SLISANOISE_INCDIR@ \
	-I@SLISAMATHTOOLS_INCDIR@ \
	-I@SLISAGENERAL_INCDIR@

lib_LIBRARIES = liblisacodemain.a

liblisacodemain_a_SOURCES = \
	LISACODE-LISACodeLightClass.cpp 