# $Id: Makefile.am,v 1.5 2006/06/06 12:55:57 petiteau Exp $
# Makefile.am

LIBS       = -llisacodemain \
	@SLISATDI_LIBS@ \
	@SLISADETECTOR_LIBS@ \
	@SLISAINPUTDATA_LIBS@ \
	@SLISAMEMORY_LIBS@ \
	@SLISAUSOTIME_LIBS@ \
	@SLISABACKGROUND_LIBS@ \
	@SLISAORBITS_LIBS@ \
	@SLISAGRAVWAVES_LIBS@ $(FFTWL) \
	@SLISANOISE_LIBS@ \
	@SLISAMATHTOOLS_LIBS@

AM_LDFLAGS = -L../SRC \
	-L@SLISATDI_LIBDIR@ \
	-L@SLISADETECTOR_LIBDIR@ \
	-L@SLISAINPUTDATA_LIBDIR@ \
	-L@SLISAMEMORY_LIBDIR@ \
	-L@SLISAUSOTIME_LIBDIR@ \
	-L@SLISABACKGROUND_LIBDIR@ \
	-L@SLISAORBITS_LIBDIR@ \
	-L@SLISAGRAVWAVES_LIBDIR@ \
	-L@SLISANOISE_LIBDIR@ \
	-L@SLISAMATHTOOLS_LIBDIR@

INCLUDES   = -I../Include \
	-I@SLISADETECTOR_INCDIR@ \
	-I@SLISATDI_INCDIR@ \
	-I@SLISAINPUTDATA_INCDIR@ \
	-I@SLISAMEMORY_INCDIR@ \
	-I@SLISAUSOTIME_INCDIR@ \
	-I@SLISABACKGROUND_INCDIR@ \
	-I@SLISAORBITS_INCDIR@ \
	-I@SLISAGRAVWAVES_INCDIR@ \
	-I@SLISANOISE_INCDIR@ \
	-I@SLISAMATHTOOLS_INCDIR@ \
	-I@SLISAGENERAL_INCDIR@

bin_PROGRAMS = \
		LISACode \
		TDIApply \
		DnonGW

LISACode_SOURCES = LISACODE-LISACode.cpp

TDIApply_SOURCES = LISACODE-TDIApply.cpp

DnonGW_SOURCES = LISACODE-DnonGW.cpp

# enf of Makefile.am