# $Id: Makefile.am,v 1.2 2006/03/15 16:58:14 petiteau Exp $
# Makefile.am

INCLUDES = \
	-I../Include \
	-I@SLISAGENERAL_INCDIR@ \
	-I@SLISAMATHTOOLS_INCDIR@

lib_LIBRARIES = liblisacodememory.a

liblisacodememory_a_SOURCES = \
	LISACODE-Memory.cpp \
	LISACODE-MemoryReadDisk.cpp \
	LISACODE-MemoryWriteDisk.cpp

# end of Makefile.am
