# $Id: Makefile.am,v 1.2 2006/03/15 16:58:14 petiteau Exp $
# Makefile.am

INCLUDES = \
	-I../Include \
	-I@SLISAGENERAL_INCDIR@ \
	-I@SLISAMATHTOOLS_INCDIR@ \
	-I@SLISANOISE_INCDIR@

lib_LIBRARIES = liblisacodegravwaves.a

liblisacodegravwaves_a_SOURCES = \
	LISACODE-GW.cpp \
	LISACODE-GWMono.cpp \
	LISACODE-GWBinary.cpp \
	LISACODE-GWFile.cpp \
	LISACODE-GWPeriGate.cpp \
	LISACODE-GWNewton2.cpp \
	LISACODE-GWSto.cpp \
	LISACODE-GWFastSpinBBH.cpp \
	LISACODE-GWCusp.cpp \
	LISACODE-GWNew.cpp \
	LISACODE-GWBuffer.cpp

# end of Makefile.am
