# $Id: Makefile.am,v 1.2 2006/03/15 16:58:14 petiteau Exp $
# Makefile.am

INCLUDES = \
	-I../Include \
	-I@SLISAGENERAL_INCDIR@ \
	-I@SLISAMATHTOOLS_INCDIR@ 

lib_LIBRARIES = liblisacodeorbits.a

liblisacodeorbits_a_SOURCES = \
	LISACODE-Geometry.cpp \
	LISACODE-GeometryAnalytic.cpp \
	LISACODE-GeometryMLDC.cpp \
	LISACODE-GeometryFile.cpp
	

# end of Makefile.am