# $Id: Makefile.am,v 1.3 2006/03/15 16:58:14 petiteau Exp $
# Makefile.am

INCLUDES = \
	-I../Include \
	-I@SLISAGENERAL_INCDIR@

lib_LIBRARIES = liblisacodemathtools.a

liblisacodemathtools_a_SOURCES = \
	LISACODE-Couple.cpp \
	LISACODE-Filter.cpp \
	LISACODE-Mat.cpp \
	LISACODE-Serie.cpp \
	LISACODE-Vect.cpp \
	LISACODE-EllipticFilter.cpp \
	com.c \
	randlib.c \
	linpack.c

# end of Makefile.am
