# $Id: Makefile.am,v 1.2 2006/03/15 16:58:14 petiteau Exp $
# Makefile.am

LIBS       = -llisacodemathtools

AM_LDFLAGS = -L../SRC

INCLUDES   = -I../Include -I@SLISAGENERAL_INCDIR@

bin_PROGRAMS = \
	TestOutilsMath \
	TestFilter

TestOutilsMath_SOURCES = LISACODE-TestOutilsMath.cpp
TestFilter_SOURCES = LISACODE-TestFilter.cpp

# enf of Makefile.am
